--- a/style.css
+++ b/style.css
@@ -258,17 +258,9 @@ a {
 }
 
 .contacto__telefonos {
-    /*display: -ms-flexbox;
-    display: -webkit-box;*/
-    display: flex;
-    /*padding: .4em 0 .8em;*/
-    /*-ms-flex-pack: distribute;*/
-    justify-content: center;
-    color: #fff;
-    /*font-weight: bold;
-    font-size: 1.5em;*/
-    width: 109px;
-    
+    width: 112px;
+    height: 20px;
+ 
 }
 
 @media screen and (min-width: 425px) {
@@ -289,15 +281,16 @@ a {
 }
 
 .contacto__telefonos p {
-    /*margin-left: 10px;*/
     font-size: 12px;
     background-color: #4dc247;
     border-radius: 3px 3px 3px 3px;
-    padding: 5px;
     color: #fff;
-    width: auto;
+    width: 100%;
+    height: 100%;
     font-weight: 600;
-    height: 21.5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
 
