--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
     font-style: normal
 }
 
+:root{
+    --background-page: url(./img/chico.webp);
+}
+
 [class^="icon-"],
 [class*=" icon-"] {
     font-family: 'icomoon' !important;
@@ -122,7 +126,7 @@ body {
     max-height: 100vh;
     margin: 0;
     font-family: "Raleway", sans-serif;
-    background-image: url(./img/Otono.jpg);
+    background-image: var(--background-page);
     background-size: cover;
     /*background-size: auto 100vh;*/
     background-attachment: fixed;
@@ -212,6 +216,7 @@ a {
         margin-top: 1em
     }
 }
+
 
 .main-header {
     background: #fff
@@ -580,4 +585,12 @@ footer {
 iframe{
     border: 0;
     /*overflow: none;*/
+}
+
+@media screen and (min-width: 900px){
+    body {
+       
+        --background-page: url(./img/Grande.webp);
+        
+    }
 }
