--- a/styles.css
+++ b/styles.css
@@ -626,15 +626,16 @@ footer {
     }
 }
 .raddios{
-    max-width: 400px;
+    /*max-width: 400px;*/
     text-align: center;
-    margin-top: 3em;
-    margin: 0 auto;
+    /*margin-top: 3em;
+    margin: 0 auto;*/
     display: none;
 }
 
 .raddios iframe{
-    width: 100%;
+    /*width: 100%;*/
+    max-width: 500px;
 }
 /*@media screen and (min-width: 1024px){
     .raddios{
