--- a/styles.css
+++ b/styles.css
@@ -630,7 +630,7 @@ footer {
     text-align: center;
     /*margin-top: 3em;
     margin: 0 auto;*/
-    /*display: none;*/
+    display: none;
 }
 
 .raddios iframe{
