--- a/whatsapp.css
+++ b/whatsapp.css
@@ -8,18 +8,21 @@
 	color:#FFF;
 	border-radius:50px;
 	text-align:center;
-  font-size:30px;
-	box-shadow: 2px 2px 3px #999;
-  z-index:100;
+  	font-size:30px;
+  	z-index:100;
 }
 .float:hover {
 	text-decoration: none;
 	color: #25d366;
-  background-color:#fff;
+  	background-color:#fff;
 }
 
 .my-float{
-	margin-top:16px;
+	display: flex;
+	justify-content: center;
+	align-items:center;
+	height:100%;
+	width: 100%;
 }
 
 @media screen and (max-width: 425px){
@@ -28,9 +31,5 @@
 		width: 50px;
 		bottom:30px;
 		right:30px;
-		/*font-size: 25px;*/
-	}
-	.my-float{
-		margin-top: 11px;
 	}
 }
