--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,13 @@
 }
 
 :root{
-    --background-page: url(./img/chicox.jpg);
-    --marquee-elements-displayed: 1;
-    --marquee-element-width: calc(var(--marquee-width) / var(--marquee-elements-displayed));
-    --marquee-animation-duration: calc(var(--marquee-elements) * 20s);
-    --marquee-element-width-px: 500px;
+    --marquee-width: auto;
+  --marquee-height: auto;
+  /* --marquee-elements: 12; */ /* defined with JavaScript */
+  --marquee-elements-displayed: 1;
+  --marquee-element-width: calc(var(--marquee-width) / var(--marquee-elements-displayed));
+  --marquee-animation-duration: calc(var(--marquee-elements) * 20s);
+  --marquee-element-width-px: 500px;
 }
 
 
@@ -139,9 +141,13 @@ body {
     ),
     var(--background-page);
     background-size: cover;
+    /*background-size: auto 100vh;*/
     background-attachment: fixed;
     background-position-x: center;
+    /*position: relative;*/
 }
+
+
 
 footer,
 header {
@@ -188,12 +194,14 @@ a {
     }
 }
 
+
 .logo {
     width: 140px;
     display: block;
     margin: 0 auto;
     padding: .5em 0;
 }
+
 
 @media screen and (min-width: 1024px) {
     .logo {
@@ -291,6 +299,7 @@ a {
     color: #fff;
     margin-left: auto;
     margin-right: auto;
+
 }
 
 
@@ -316,18 +325,31 @@ a {
         width: 90%;
     }
 }
-
+.animation{
+    background-color: hsl(350, 87%, 55%) !important;
+    animation-name: breath;
+    animation-iteration-count: infinite;
+    animation-duration: 1.3s;
+    
+}
+.nombre{
+    /*width: auto;*/
+    margin-right: auto !important;
+    margin-left: auto !important;
+}
 .live-radio__title {
     text-transform: uppercase;
     text-align: center;
-    padding: .2em;
+    padding: .2em 6px;
     margin: 1em 0;
-    border-bottom: solid 1px rgba(250, 250, 250, .4);
     font-family: "Raleway", sans-serif;
-    width: 100px;
-    background-color: rgba(200, 0, 0, .8);
+    /*width: 100px;*/
+    background-color: #ccc;
     font-size: 1em;
     border-radius: 4px;
+    display: inline-block;
+    opacity: 0.7;
+  
 }
 .containImg{
     display: flex;
@@ -349,6 +371,7 @@ a {
 .live-radio__aire--description {
     text-align: center;
     margin-bottom: 1.5em;
+    overflow: hidden;
 }
 
 .live-radio__aire--description .nombre {
@@ -445,6 +468,7 @@ a {
 footer {
     background: #ccc;
     border-top: .5em solid #c0c0c0;
+
 }
 
 .footer__container {
@@ -490,10 +514,10 @@ footer {
 }
 
 
-
 .span::before{
     content: "⬇️";
    margin-left: .5em;
+
 }
 
 @media screen and (min-width: 425px) {
@@ -535,6 +559,7 @@ footer {
     max-width: 500px;
     margin-left: auto;
     margin-right: auto;
+   
 }
 
 @media screen and (min-width: 1485px){
@@ -553,6 +578,7 @@ footer {
     width: 100%;
     max-width: 500px;
 }
+
 
 @media screen and (max-width: 425px){
     .raddios{
@@ -575,8 +601,9 @@ footer {
 
 iframe{
     border: 0;
-  
+
 }
+
 
 div#contolBar.controlBar{
     background-color: #fff !important;
@@ -586,7 +613,6 @@ div#contolBar.controlBar{
     color: #444;
     font-family: sans-serif;
 }
-
 .social-media-contac{
     display: flex;
     flex-direction: column;
@@ -597,8 +623,8 @@ div#contolBar.controlBar{
     color: inherit;
     font-size: 1.1em;
     margin-bottom: .4em
-}
 
+}
 .social-media-contac a:last-child {
     margin-bottom: 0;
 
@@ -609,15 +635,18 @@ div#contolBar.controlBar{
     margin-left: .5em;
 }
 
+@keyframes breath {
+    from {opacity: 0.7;} /* Opacidad al comienzo de la animación */
+    50% {opacity: 1;} /* Opacidad al 50% de animación */
+    to {opacity: 0.7;} /* Opacidad0.1;} /* Opacidad al final de la animación */    
+}
 
 @media screen and (max-width: 425px){
     .live-radio__title{
-        display: none;
+        font-size: .8rem;
     }
 
-    .live{
-        margin-top: 5em;
-    }
+   
 }
 
 /*-------------------Inicio Marqee---------------------*/
@@ -658,3 +687,58 @@ div#contolBar.controlBar{
     max-height: 100%;
     white-space: nowrap;
   }
+  
+
+  /***************** Loading... ****************/
+
+  @keyframes ldio-3k6tj0bxhgs-1 {
+    0% { top: 36px; height: 128px }
+    50% { top: 60px; height: 80px }
+    100% { top: 60px; height: 80px }
+  }
+  @keyframes ldio-3k6tj0bxhgs-2 {
+    0% { top: 41.99999999999999px; height: 116.00000000000001px }
+    50% { top: 60px; height: 80px }
+    100% { top: 60px; height: 80px }
+  }
+  @keyframes ldio-3k6tj0bxhgs-3 {
+    0% { top: 48px; height: 104px }
+    50% { top: 60px; height: 80px }
+    100% { top: 60px; height: 80px }
+  }
+  .ldio-3k6tj0bxhgs div { position: absolute; width: 20px }.ldio-3k6tj0bxhgs div:nth-child(1) {
+    left: 35px;
+    background: #ffffff;
+    animation: ldio-3k6tj0bxhgs-1 1s cubic-bezier(0,0.5,0.5,1) infinite;
+    animation-delay: -0.2s
+  }
+  .ldio-3k6tj0bxhgs div:nth-child(2) {
+    left: 85px;
+    background: #f8f8f8;
+    animation: ldio-3k6tj0bxhgs-2 1s cubic-bezier(0,0.5,0.5,1) infinite;
+    animation-delay: -0.1s
+  }
+  .ldio-3k6tj0bxhgs div:nth-child(3) {
+    left: 135px;
+    background: #f0f0f0;
+    animation: ldio-3k6tj0bxhgs-3 1s cubic-bezier(0,0.5,0.5,1) infinite;
+    animation-delay: undefineds
+  }
+  
+  .loadingio-spinner-pulse-8xm12tyxpn8 {
+    width: 200px;
+    height: 200px;
+    display: inline-block;
+    overflow: hidden;
+    /*background: #dddddd;*/
+  }
+  .ldio-3k6tj0bxhgs {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform: translateZ(0) scale(1);
+    backface-visibility: hidden;
+    transform-origin: 0 0; /* see note above */
+  }
+  .ldio-3k6tj0bxhgs div { box-sizing: content-box; }
+  /* generated by https://loading.io/ */
