--- a/styles.css
+++ b/styles.css
@@ -538,9 +538,9 @@ footer {
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 1em;
-    padding: .3em;
+    padding: 1em;
     padding-top: 1em;
-    border-bottom: solid 1px rgba(0, 0, 0, 0.4);
+    border-bottom: solid 1px rgba(123, 123, 123, 0.1);
     font-family: "Relaway", sans-serif;
     color: #444;
     font-size: 1em;
