--- a/styles.css
+++ b/styles.css
@@ -721,7 +721,13 @@ div#contolBar.controlBar{
     /*width: var(--marquee-element-width);*/
     max-height: 100%;
     white-space: nowrap;
-    padding: 0 10px;
+    /*padding: 0 10px;*/
+  }
+
+  @media screen and (min-width:1024px){
+    .marquee-content li {
+        padding: 0 10px
+    }
   }
   
 
