--- a/styles.css
+++ b/styles.css
@@ -370,8 +370,9 @@ a {
     border-radius: 50%;
     margin: 0 10px;
     display: block;
-    width: 120px;
-    height: 120px
+    width: 128px;
+    height: 128px;
+    border: rgba(255, 255, 255, 0.20) 8px solid;
 }
 @media screen and (min-width: 1024px){
     .live-radio__aire--img {
