--- a/styles.css
+++ b/styles.css
@@ -340,6 +340,8 @@ a {
   border-radius: 4px;
   display: inline-block;
   opacity: 0.7;
+  line-height: 1.3;
+  height: 25px;
 }
 .live-radio__title.tag {
   opacity: 1;
@@ -355,6 +357,7 @@ a {
   width: 128px;
   height: 128px;
   border: rgba(255, 255, 255, 0.2) 8px solid;
+  transition: all 0.2s;
 }
 @media screen and (min-width: 1024px) {
   .live-radio__aire--img {
@@ -368,8 +371,8 @@ a {
 }
 .live-radio__aire--img:hover {
   cursor: pointer;
-  background-color: rgba(0, 0, 0, 1);
-  filter: contrast(0.8);
+  background-color: rgb(255 255 255 / 49%);
+  filter: contrast(1.2);
 }
 
 .live-radio__aire--description {
@@ -652,6 +655,7 @@ div#contolBar.controlBar {
 @media screen and (max-width: 425px) {
   .live-radio__title {
     font-size: 0.9rem;
+    height: 22px;
   }
 }
 
@@ -844,33 +848,5 @@ div#contolBar.controlBar {
 @media screen and (min-width: 1024px) {
   .containImg a + a {
     margin-left: -55px;
-  }
-}
-
-header {
-  position: relative;
-}
-.contenedor-luz {
-  display: flex;
-  justify-content: space-between;
-  height: 90px;
-}
-.navidad {
-  /*background-color: #bb0000;*/
-  width: 100%;
-  /*height: 100px;*/
-  position: absolute;
-  top: 100%;
-}
-
-@media screen and (min-width: 375px) {
-  .contenedor-luz {
-    height: 100px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .contenedor-luz {
-    height: 140px;
   }
 }
