--- a/styles.css
+++ b/styles.css
@@ -363,7 +363,7 @@ a {
   .live-radio__aire--img {
     width: 168px;
     height: 168px;
-    border: rgba(255, 255, 255, 0.2) 12px solid;
+    /*border: rgba(255, 255, 255, 0.2) 12px solid;*/
   }
   /*.live-radio__aire--description .nombre{
         font-size: 2em;
