--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ body {
   height: 100%;
   margin: 0;
   font-family: "Raleway", sans-serif;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), var(--background-page);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), var(--background-page);
   background-size: cover;
   /*background-size: auto 100vh;*/
   background-attachment: fixed;
@@ -564,9 +564,12 @@ footer {
   transition: all 1s;
 }
 
-.live iframe {
-  opacity: 0.7;
+.live-radio iframe {
+  display: block;
+  margin: 0 auto;
+  max-width: 350px;
 }
+
 .center {
   display: block;
   max-width: 500px;
